# SENCalculator

./: Makefile  README.md  app.py  evaluator.py  main.py  prime.py  requirements.txt  simple_eval.py  test_prime.py  websockets_server.py
.github/workflows/: pybrowser.yml  pylint.yml  pytest.yml
calc/: CMakeLists.txt  calc.pc.in
calc/include/: calcresult.h  calculator.h  exeptions.h  export.h  stack.h  token.h
calc/sources/: calculator.c  export.c  stack.c  token.c
static/: calculator.js  handtest_server.py  index.html  test_frontend.py
templates/: index.html
test/: handtest_server.py  test_frontend.py  test_integration.py  test_simple_evalutor.py
